--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diseño de una pagina web</title>
     <link rel="shortcut icon" href="img/iconos/icono.ico"  type="image/x-icon">
-    <link rel="stylesheet" href="css/styles.CSS">
+    <link rel="stylesheet" href="/css/styles.CSS">
 </head>
 
 <body>
